--- a/env/css/style.css
+++ b/env/css/style.css
@@ -1,43 +1,35 @@
-html, body {
-  background: #444444;
-  color: #dddddd;
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-  font-size: 18px;
-  width: 100%;
+html,
+body {
+  box-sizing: border-box;
   height: 100%;
   margin: 0;
-  box-sizing: border-box;
+  font-family: monospace;
+  font-size: 16px;
+  background: #eeeeee;
 }
 h1 {
-  font-weight: 400;
   margin: 0;
 }
+a {
+  color: #0000ff;
+  text-decoration: underline;
+}
+a:hover {
+  color: #ff0000;
+}
 .wrapper {
+  min-height: 100%;
   box-sizing: border-box;
-  max-width: 100%;
-  height: 100%;
-  padding: 20px;
-  /* margin: 20px; */
-  overflow: hidden;
-
+  margin: 0;
 }
-.title,
-.subtitle {
+.text {
   text-align: center;
+  margin-bottom: 25px;
 }
-.listcontent {
-  max-height: 80%;
-  box-sizing: content-box;
-  margin: 0px;
-  padding: 15px 40px;
-  border-radius: 10px;
-  background: #333333;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  align-content: flex-start;
-  line-height: 1.4;
-}
-.listitem {
-  width: 20%;
+.list {
+  width: fit-content;
+  margin: 0 auto;
+  padding: 25px 25px 25px 50px;
+  background: #e5e5e5;
+  line-height: 1.8;
 }
