--- a/relvise/repeat_1/css/style.css
+++ b/relvise/repeat_1/css/style.css
@@ -18,12 +18,16 @@ img {
 
 a {
   text-decoration: none;
+  color: inherit;
 }
 
 html, body {
   width: 100%;
   height: 100%;
   box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
+  font-size: 14px;
+  color: #737373;
 }
 
 .wrapper {
@@ -36,6 +40,84 @@ html, body {
   max-width: 1057px;
   padding: 0 5px 0 5px;
   margin: 0 auto;
+}
+
+.header__container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  min-height: 104px;
+}
+@media (max-width: 769px) {
+  .header__container {
+    min-height: 60px;
+  }
+}
+.header__left {
+  display: flex;
+  align-items: center;
+}
+.header__logo {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 133%;
+  letter-spacing: 0.1px;
+  color: #252b42;
+  margin: 5px 5px 5px 0;
+}
+.header__logo:not(:last-child) {
+  margin-right: 127px;
+}
+@media (max-width: 769px) {
+  .header__logo:not(:last-child) {
+    margin-right: 30px;
+  }
+}
+.header .headmenu {
+  display: flex;
+  flex-wrap: wrap;
+}
+.header .headmenu li {
+  list-style: none;
+}
+.header .headmenu__item {
+  line-height: 171%;
+  letter-spacing: 0.2px;
+  font-weight: 600;
+}
+@media (max-width: 769px) {
+  .header .headmenu__item {
+    font-size: 16px;
+  }
+}
+.header .headmenu__item a {
+  display: inline-block;
+  padding: 0 5px;
+}
+.header .headmenu__item a:hover {
+  text-decoration: underline;
+}
+.header .headmenu__item:not(:last-child) {
+  margin-right: 10px;
+}
+.header__right {
+  display: none;
+  width: 50px;
+  border-radius: 3px;
+  margin-right: 10px;
+  background: #efefef;
+}
+.header__burger {
+  padding: 7px;
+}
+.header__burger span {
+  display: block;
+  width: 100%;
+  height: 2px;
+  background: #888888;
+}
+.header__burger span:not(:last-child) {
+  margin-bottom: 7px;
 }
 
 .main {
