--- a/relvise/repeat_1/scss/style.scss
+++ b/relvise/repeat_1/scss/style.scss
@@ -16,11 +16,16 @@ img {
 }
 a {
   text-decoration: none;
+  color: inherit;
 }
 html, body {
   width: 100%;
   height: 100%;
   box-sizing: border-box;
+
+  font-family: 'Montserrat', sans-serif;
+  font-size: 14px;
+  color: #737373;
 }
 // --------------------------------------------------- general
 .wrapper {
@@ -34,7 +39,98 @@ html, body {
   margin: 0 auto;
 }
 // --------------------------------------------------- header
-.header {}
+.header {
+  &__container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    min-height: 104px;
+    @media (max-width: 769px) {
+      min-height: 60px;
+    }
+  }
+  &__left {
+    display: flex;
+    align-items: center;
+  }
+  &__logo {
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 133%;
+    letter-spacing: 0.1px;
+    color: #252b42;
+
+    margin: 5px 5px 5px 0;
+    &:not(:last-child) {
+      margin-right: 127px;
+      @media (max-width: 769px) {
+        margin-right: 30px;
+      }
+    }
+  }
+  &__menu {}
+  .headmenu {
+    display: flex;
+    flex-wrap: wrap;
+
+    & li {
+      list-style: none;
+    }
+
+    &__item {
+      line-height: 171%;
+      letter-spacing: 0.2px;
+      font-weight: 600;
+      @media (max-width: 769px) {
+        font-size: 16px;
+      }
+
+      & a {
+        display: inline-block;
+
+        padding: 0 5px;
+
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+
+      &:not(:last-child) {
+        margin-right: 10px;
+      }
+    }
+  }
+  &__right {
+    display: none;
+
+    width: 50px;
+
+    border-radius: 3px;
+
+    margin-right: 10px;
+
+    background: #efefef;
+
+  }
+  &__burger {
+
+    padding: 7px;
+
+    & span {
+      display: block;
+
+      width: 100%;
+      height: 2px;
+
+      background: #888888;
+
+      &:not(:last-child) {
+        margin-bottom: 7px;
+      }
+    }
+  }
+}
 // --------------------------------------------------- main
 .main {
   flex: 1 0 100%;
