--- a/relvise/repeat_1/scss/style.scss
+++ b/relvise/repeat_1/scss/style.scss
@@ -27,6 +27,34 @@ html, body {
   font-size: 14px;
   color: #737373;
 }
+//---------------------------------------------------- burger
+body.activeburger {
+  overflow: hidden;
+
+  .headmenu {
+    left: 10px;
+    right: 10px;
+
+    width: auto;
+
+    overflow: auto;
+
+    padding: 25px;
+  }
+  .header__burger {
+    & span {
+      &:not(:last-child, :first-child) {
+        opacity: 0;
+      }
+      &:first-child {
+        transform: translate(0px, 14px) rotate(45deg);
+      }
+      &:last-child {
+        transform: translate(0px, -13px) rotate(-45deg);
+      }
+    }
+  }
+}
 // --------------------------------------------------- general
 .wrapper {
   min-height: 100%;
@@ -73,6 +101,25 @@ html, body {
   .headmenu {
     display: flex;
     flex-wrap: wrap;
+    @media (max-width: 426px) {
+      display: block;
+
+      position: absolute;
+
+      left: -10px;
+      top: 85px;
+      bottom: 10px;
+
+      width: 0px;
+
+      background: #eeeeee;
+
+      border-radius: 15px;
+
+      overflow: hidden;
+
+      padding: 0px;
+    }
 
     & li {
       list-style: none;
@@ -85,9 +132,19 @@ html, body {
       @media (max-width: 769px) {
         font-size: 16px;
       }
+      @media (max-width: 426px) {
+        font-size: 20px;
+        line-height: 250%;
+
+
+        text-align: center;
+      }
 
       & a {
         display: inline-block;
+        @media (max-width: 426px) {
+          display: block;
+        }
 
         padding: 0 5px;
 
@@ -98,22 +155,29 @@ html, body {
 
       &:not(:last-child) {
         margin-right: 10px;
+        @media (max-width: 426px) {
+          margin-right: 0;
+        }
       }
     }
   }
   &__right {
     display: none;
+    @media (max-width: 426px) {
+      display: block;
+    }
 
     width: 50px;
 
     border-radius: 3px;
 
-    margin-right: 10px;
+    margin-right: 5px;
 
-    background: #efefef;
+    background: #fafafa;
 
   }
   &__burger {
+    opacity: 1;
 
     padding: 7px;
 
