--- a/relvise/repeat_1/css/style.css
+++ b/relvise/repeat_1/css/style.css
@@ -1,5 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&display=swap");
-@import 'normalize.css';
 * {
   margin: 0;
   padding: 0;
@@ -34,11 +33,14 @@ body.activeburger {
   overflow: hidden;
 }
 body.activeburger .headmenu {
-  left: 10px;
-  right: 10px;
-  width: auto;
+  opacity: 1;
+  left: 2%;
+  width: 96%;
   overflow: auto;
   padding: 25px;
+}
+body.activeburger .header__burger {
+  background: #eeeeee;
 }
 body.activeburger .header__burger span:not(:last-child, :first-child) {
   opacity: 0;
@@ -100,15 +102,17 @@ body.activeburger .header__burger span:last-child {
 @media (max-width: 426px) {
   .header .headmenu {
     display: block;
+    opacity: 0;
     position: absolute;
-    left: -10px;
-    top: 85px;
-    bottom: 10px;
-    width: 0px;
+    left: -2%;
+    top: 60px;
+    bottom: 2%;
+    width: 0%;
     background: #eeeeee;
     border-radius: 15px;
     overflow: hidden;
     padding: 0px;
+    transition: 0.2s;
   }
 }
 .header .headmenu li {
@@ -151,23 +155,22 @@ body.activeburger .header__burger span:last-child {
     margin-right: 0;
   }
 }
-.header__right {
+.header__burger {
   display: none;
   width: 50px;
   border-radius: 3px;
   margin-right: 5px;
   background: #fafafa;
-}
-@media (max-width: 426px) {
-  .header__right {
-    display: block;
-  }
-}
-.header__burger {
   opacity: 1;
   padding: 7px;
 }
+@media (max-width: 426px) {
+  .header__burger {
+    display: block;
+  }
+}
 .header__burger span {
+  transition: 0.2s;
   display: block;
   width: 100%;
   height: 2px;
