--- a/relvise/repeat_2/scss/style.scss
+++ b/relvise/repeat_2/scss/style.scss
@@ -46,6 +46,9 @@ body {
     align-items: center;
 
     min-height: 104px;
+    @media (max-width: 769px) {
+      min-height: 60px;
+    }
   }
   &__logo {
     font-size: 24px;
@@ -57,6 +60,9 @@ body {
     margin: 5px 5px 5px 0;
     &:not(:last-child) {
       margin-right: 127px;
+      @media (max-width: 769px) {
+        margin-right: 30px;
+      }
     }
   }
   &__menu {}
@@ -77,10 +83,16 @@ body {
       font-weight: 600;
       line-height: 171%;
       letter-spacing: 0.2px;
+      @media (max-width: 769px) {
+        font-size: 16px;
+      }
 
       padding: 0px 5px;
       &:not(:last-child) {
         margin-right: 11px;
+        @media (max-width: 769px) {
+          margin-right: 0;
+        }
       }
     }
   }
