--- a/relvise/repeat_2/css/style.css
+++ b/relvise/repeat_2/css/style.css
@@ -39,9 +39,33 @@ body {
   margin: 0 auto;
 }
 
+body.activemenu {
+  overflow: hidden;
+}
+body.activemenu .headermenu {
+  left: 2%;
+  width: 96%;
+  overflow: auto;
+  padding: 25px;
+  opacity: 1;
+}
+body.activemenu .header__burger {
+  background: #eeeeee;
+}
+body.activemenu .header__burger span:not(:last-child, :first-child) {
+  opacity: 0;
+}
+body.activemenu .header__burger span:first-child {
+  transform: translate(0px, 14px) rotate(45deg);
+}
+body.activemenu .header__burger span:last-child {
+  transform: translate(0px, -13px) rotate(-45deg);
+}
+
 .header__container {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   min-height: 104px;
 }
 @media (max-width: 769px) {
@@ -70,8 +94,30 @@ body {
   display: flex;
   flex-wrap: wrap;
 }
+@media (max-width: 426px) {
+  .header .headermenu {
+    position: absolute;
+    display: block;
+    left: -20px;
+    top: 60px;
+    bottom: 2%;
+    background: #eeeeee;
+    border-radius: 10px;
+    text-align: center;
+    width: 0;
+    overflow: hidden;
+    padding: 0;
+    opacity: 0;
+    transition: 0.2s;
+  }
+}
 .header .headermenu li {
   list-style: none;
+}
+@media (max-width: 426px) {
+  .header .headermenu a {
+    display: block;
+  }
 }
 .header .headermenu a:hover {
   text-decoration: underline;
@@ -87,6 +133,12 @@ body {
     font-size: 16px;
   }
 }
+@media (max-width: 426px) {
+  .header .headermenu__item {
+    font-size: 20px;
+    line-height: 250%;
+  }
+}
 .header .headermenu__item:not(:last-child) {
   margin-right: 11px;
 }
@@ -96,17 +148,24 @@ body {
   }
 }
 .header__burger {
-  display: none;
   flex: 0 0 60px;
+  display: none;
   background: #fafafa;
   padding: 10px;
   border-radius: 5px;
+}
+@media (max-width: 426px) {
+  .header__burger {
+    display: block;
+  }
 }
 .header__burger span {
   display: block;
   width: 100%;
   height: 2px;
   background: #737373;
+  opacity: 1;
+  transition: 0.2s;
 }
 .header__burger span:not(:last-child) {
   margin-bottom: 7px;
