--- a/relvise/repeat_2/css/normalize.css
+++ b/relvise/repeat_2/css/normalize.css
@@ -30,8 +30,8 @@ main {
  * `article` contexts in Chrome, Firefox, and Safari.
  */
 h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
+  /* font-size: 2em; */
+  margin: 0;
 }
 /* Grouping content
    ========================================================================== */
