--- a/relvise/repeat_2/css/style.css
+++ b/relvise/repeat_2/css/style.css
@@ -174,3 +174,14 @@ body.activemenu .header__burger span:last-child {
 .main {
   flex: 1 0 auto;
 }
+.main__welcome {
+  margin: 80px 0 0 0;
+}
+.main .welcome__title {
+  font-family: Montserrat;
+  font-size: 58px;
+  font-weight: 800;
+  line-height: 80px;
+  letter-spacing: 0.200000003px;
+  text-align: left;
+}
