--- a/relvise/repeat_2/css/style.css
+++ b/relvise/repeat_2/css/style.css
@@ -62,6 +62,12 @@ body.activemenu .header__burger span:last-child {
   transform: translate(0px, -13px) rotate(-45deg);
 }
 
+.header {
+  position: absolute;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+}
 .header__container {
   display: flex;
   align-items: center;
@@ -175,5 +181,63 @@ body.activemenu .header__burger span:last-child {
   flex: 1 0 auto;
 }
 .main__welcome {
-  margin: 80px 0 0 0;
+  padding-top: 184px;
+}
+.main .welcome {
+  position: relative;
+}
+.main .welcome__container {
+  position: relative;
+  z-index: 1;
+  padding-bottom: 191px;
+}
+.main .welcome__container > *:not(:last-child) {
+  margin-bottom: 35px;
+}
+.main .welcome__title {
+  font-size: 58px;
+  font-weight: 800;
+  line-height: 1.37;
+  letter-spacing: 0.2px;
+  color: #252b42;
+}
+.main .welcome__text {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 150%;
+  letter-spacing: 0.2px;
+}
+.main .welcome__buttons {
+  display: flex;
+  flex-wrap: wrap;
+  margin: -5px;
+}
+.main .welcome__link {
+  margin: 5px;
+  background: #ff7b47;
+  padding: 10px 36px;
+  border-radius: 37px;
+  color: #ffffff;
+  font-weight: 700;
+  line-height: 200%;
+  letter-spacing: 0.2px;
+}
+.main .welcome__link_border {
+  background: transparent;
+  border: 1px solid #0D5C63;
+  color: #0D5C63;
+}
+.main .welcome__image {
+  position: absolute;
+  z-index: 0;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+}
+.main .welcome__image img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
