--- a/relvise/repeat_2/scss/style.scss
+++ b/relvise/repeat_2/scss/style.scss
@@ -65,6 +65,12 @@ body.activemenu {
 }
 // ----------------------------------- header
 .header {
+  position: absolute;
+  z-index: 2;
+
+  width: 100%;
+  height: 100%;
+
   &__container {
     display: flex;
     align-items: center;
@@ -193,17 +199,80 @@ body.activemenu {
   // ----------------------------- elements
 
   &__welcome {
-    margin: 80px 0 0 0;
+    padding-top: 184px;
   }
   // ----------------------------- objects
 
   .welcome {
-    &__container {}
-    &__title {}
-    &__text {}
-    &__buttons {}
-    &__link {}
-    &__image {}
+    position: relative;
+
+    &__container {
+      position: relative;
+      z-index: 1;
+      &>*:not(:last-child) {
+        margin-bottom: 35px;
+      }
+      padding-bottom: 191px;
+    }
+    &__title {
+      font-size: 58px;
+      font-weight: 800;
+      line-height: 1.37;
+      letter-spacing: 0.2px;
+
+      color: #252b42;
+    }
+    &__text {
+      font-weight: 500;
+      font-size: 20px;
+      line-height: 150%;
+      letter-spacing: 0.2px;
+    }
+    &__buttons {
+      display: flex;
+      flex-wrap: wrap;
+
+      margin: -5px;
+    }
+    &__link {
+      margin: 5px;
+
+      background: #ff7b47;
+
+      padding: 10px 36px;
+
+      border-radius: 37px;
+
+      color: #ffffff;
+
+      font-weight: 700;
+      line-height: 200%;
+      letter-spacing: 0.2px;
+
+      &_border {
+        background: transparent;
+
+        border: 1px solid #0D5C63;
+
+        color: #0D5C63;
+      }
+    }
+    &__image {
+      position: absolute;
+      z-index: 0;
+
+      width: 100%;
+      height: 100%;
+
+      left: 0;
+      top: 0;
+      & img {
+        width: 100%;
+        height: 100%;
+
+        object-fit: cover;
+      }
+    }
   }
 }
 // ----------------------------------- footer
