--- a/relvise/repeat_2/css/style.css
+++ b/relvise/repeat_2/css/style.css
@@ -49,6 +49,9 @@ body.activemenu .headermenu {
   padding: 25px;
   opacity: 1;
 }
+body.activemenu .header {
+  height: 100%;
+}
 body.activemenu .header__burger {
   background: #eeeeee;
 }
@@ -66,7 +69,7 @@ body.activemenu .header__burger span:last-child {
   position: absolute;
   z-index: 2;
   width: 100%;
-  height: 100%;
+  height: auto;
 }
 .header__container {
   display: flex;
