--- a/relvise/repeat_2/scss/style.scss
+++ b/relvise/repeat_2/scss/style.scss
@@ -53,6 +53,9 @@ body.activemenu {
 
     opacity: 1;
   }
+  .header {
+    height: 100%;
+  }
   .header__burger {
     background: #eeeeee;
     span {
@@ -74,7 +77,7 @@ body.activemenu {
   z-index: 2;
 
   width: 100%;
-  height: 100%;
+  height: auto;
 
   &__container {
     display: flex;
